    Reported by Shawn Landden <shawnlandden@gmail.com>.
  * Recognize «start-stop-daemon -C» as documented. Closes: #719746
    Reported by Brian S. Julin <bri@abrij.org>.
  * When update-alternatives is told to change slave links, do not warn that
    the link group is broken, just print a notice that the alternative is
    being updated due to the changes.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * French (Christian Perrier): fix incorrectly translated sentence,
    thanks to Fabien Givors.
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sun, 28 Jul 2013 15:06:29 +0200

dpkg (1.17.1) unstable; urgency=low

  * Man pages cleanup:
    - Make explicit that dpkg-shlibdeps -e can be used multiple times.
    - Improve documentation on how to update the available database before
      setting package selections. Suggested by Klaus Ita <koki.eml@gmail.com>.
  * Add manpages-it Replaces to dpkg due to new translated man pages.
    Reported by Alessio Gaeta <alga777@gmail.com>. Closes: #717983
  * Reword libdpkg-perl description and only list public modules.
  * Remove space before value in dpkg-parsechangelog -S option on pkg-info.mk.
    Closes: #718014
  * Make the build system install start-stop-daemon directly under /sbin,
    instead of moving it around in debian/rules.

 -- Guillem Jover <guillem@debian.org>  Sun, 28 Jul 2013 14:44:50 +0200

dpkg (1.17.0) unstable; urgency=low

  [ Guillem Jover ]
  * Switch update-alternatives back to a fatal error on out of range priority
    on --install.
  * Document dpkg-deb --debug in --help output.
  * Bump Standards-Version to 3.9.4 (no changes needed).
  * Use the new canonical dpkg git Vcs URLs.
  * Remove ancient version from zlibg1-dev Build-Depends.
  * Add compression development packages to libdpkg-dev Depends.
  * Man pages cleanup: