@@ -47,6 +47,10 @@ dpkg (1.17.2) UNRELEASED; urgency=low
   * When update-alternatives is told to change slave links, do not warn that
     the link group is broken, just print a notice that the alternative is
     being updated due to the changes.
+  * Add a new «dpkg --verify» command to check the integrity of packages
+    installed files. Add a --verify-format option to excplicitly select the
+    output format, currently only rpm compatible output is supported, but
+    the default might change in the future. Closes: #187019
 
   [ Updated programs translations ]
   * German (Sven Joachim).
